# shipping_service

./: .env  Cargo.toml
src/: config.rs  db.rs  handlers.rs  main.rs  models.rs
