[package]
name = "shipping_service"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls", "uuid", "json", "time", "chrono"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
syn = { version = "1.0", features = ["derive", "parsing", "full"] }
quote = "1.0"
proc-macro2 = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[database]
url = "postgres://postgres:AnnaSieva1@localhost/parcels"